--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
-selam
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>mehmetOSKA</title>
+</head>
+<body>
+    <marquee behavior="scroll" direction="right">
+        <h1>MEHMET KAYHAN KOD YAZIYOR...</h1>
+    </marquee>
+
+
+
+
+
+
+</body>
+</html>
 
 
 
